# hkis-website

./: .gitignore  .pylintrc  Dockerfile  Pipfile  README-docker.md  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg  tox.ini
cli/: setup.cfg
hackinscience_org/: __init__.py  asgi.py  celery.py  forms.py  routing.py  settings.py  urls.py  wsgi.py
hkis/: __init__.py  admin.py  api.py  celery.py  consumers.py  context_processors.py  db.sqlite3  forms.py  models.py  routing.py  serializers.py  settings.py  tasks.py  tests.py  urls.py  utils.py  views.py  wsgi.py
hkis/fixtures/: initial.json
hkis/hkis/: settings.py  urls.py
hkis/migrations/: 0001_initial.py  0002_auto_20201204_1148.py  0003_auto_20201204_1307.py  0003_userinfo_hkis_userin_points_d45d8e_idx.py  0004_auto_20201204_1337.py  0004_remove_userinfo_rank.py  0005_auto_20211201_0109.py  0005_exercise_created_at.py  0006_auto_20211201_1431.py  0006_user_public_profile.py  0007_exercise_points.py  0007_exercise_solved_by.py  0008_auto_20201207_1511.py  0008_rename_check_exercise_check_py_and_more.py  0009_auto_20201214_1258.py  0010_auto_20201214_1343.py  0011_auto_20201218_1001.py  0012_page.py  0013_auto_20210411_2106.py  0014_auto_20210411_2136.py  0015_auto_20210429_1411.py  0016_exercise_page.py  0017_auto_20210429_1443.py  0018_team_points.py  0019_auto_20210507_1828.py  0020_auto_20211004_1345.py  0021_answer_is_safe.py  0022_answer_website_ans_is_vali_c5790f_idx.py  0023_remove_exercise_solution.py  0024_auto_20211127_1123.py  0025_userinfo.py  0026_auto_20211127_1535.py  0027_remove_user_public_profile.py  0028_auto_20211127_1631.py  0029_auto_20211127_2056.py
hkis/tests/: test_admin.py  test_api.py  test_categories.py  test_pages.py  test_rank.py  test_teachers_permissions.py  test_teams.py  test_views.py
hkis/website/: admin.py  models.py
moulinette/: tasks.py
scripts/: fetch.py  push.py  reinsert.py  utils.py
templates/: 403.html
templates/admin/: base_site.html
website/: admin.py  api.py  consumers.py  context_processors.py  forms.py  models.py  routing.py  serializers.py  tests.py  translation.py  utils.py  views.py
website/fixtures/: initial.json
website/migrations/: 0001_initial.py  0002_auto_20180127_1714.py  0002_auto_20181125_1536.py  0003_auto_20181128_2306.py  0003_auto_20201204_1307.py  0004_auto_20201204_1337.py  0004_exercise_initial_solution.py  0005_exercise_created_at.py  0005_snippet.py  0006_exercise_slug.py  0009_lesson.py  (+25 more)
(+59 files in other folders)
