[flake8]
ignore = E501

[metadata]
name = django-hkis
version = attr: hkis.__version__
description = Django HackInScience exercises app.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = Julien Palard
author_email = julien@palard.fr
url = https://framagit.org/hackinscience/hkis-website
license = MIT License
classifiers =
  Development Status :: 5 - Production/Stable
  License :: OSI Approved :: MIT License
  Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >= 3.7
install_requires =
  bleach
  celery[redis]
  channels
  channels-redis
  django
  django-ace
  django-crispy-forms
  django-extensions
  django-filter
  django-modeltranslation
  django-rest-framework
  markdown
  pygments

[options.package_data]
hkis = templates/*/*.html, static/*, static/*/*, locale/*/*/*.po, fixtures/*.json

[options.packages.find]
exclude =
   example
   hackinscience_org
